# seed

./: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md  SECURITY.md  cubic.yaml  lefthook.yml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  template-ci.yml
docs/: INDEX.md  architecture.md  generated-repo-knowledge-contract.md  overview.md  telemetry-design.md  telemetry-explained.md
scripts/: build-release.sh  seed_entry.py
src/seed/: __init__.py  audit.py  cli.py
src/seed/_template/: copier.yml
src/seed/_template/template/: .copier-answers.yml.jinja  .gitignore  .pre-commit-config.yaml.jinja  .python-version.jinja  .sourcery.yaml  LICENSE.jinja  README.md.jinja  cubic.yaml  pyproject.toml.jinja  {% if kind != 'lib' %}.dockerignore{% endif %}  {% if kind != 'lib' %}Dockerfile{% endif %}.jinja
src/seed/_template/template/.github/workflows/: ci.yml.jinja  codeql.yml  scorecard.yml  security.yml  {% if publish %}release.yml{% endif %}.jinja
src/seed/_template/template/docs/: INDEX.md.jinja  architecture.md.jinja
src/seed/_template/template/src/{{package_name}}/: __init__.py.jinja  config.py.jinja  logging_setup.py.jinja  {% if kind != 'lib' %}cli.py{% endif %}.jinja  {% if kind != 'lib' %}telemetry.py{% endif %}.jinja
src/seed/_template/template/tests/: test_config.py.jinja  {% if kind != 'lib' %}test_cli.py{% endif %}.jinja  {% if kind != 'lib' %}test_telemetry.py{% endif %}.jinja
tests/: test_cli.py
