[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[project]
name = "seed"
version = "0.1.2"
description = "统一 Python 仓脚手架: Copier 模版 + uv 环境编排"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eridanus" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.26.8",
    "copier>=9.0",
    "pyyaml>=6.0",
]

[project.scripts]
seed = "seed.cli:app"

[dependency-groups]
# ruff/pyrefly 按需运行, 不进 dev-deps, 让 .venv 保持纯 Python。
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
    "poethepoet",
]
freeze = ["pyinstaller>=6,<7"]

[tool.poe.tasks]
lint = "uvx ruff@0.15.16 check ."
fmt = "uvx ruff@0.15.16 format ."
fmt-check = "uvx ruff@0.15.16 format --check ."
typecheck = "uv run --with pyrefly==1.0.0 pyrefly check"
test = "pytest"
check = { sequence = ["lint", "fmt-check", "typecheck", "test"], help = "lint + format-check + typecheck + test" }
freeze = { cmd = "./scripts/build-release.sh", help = "build the release binary" }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# TRY003: raise 现场的语境化短信息是通用惯用法, 不强制建异常类
extend-ignore = ["TRY003"]

[tool.ruff.lint.extend-per-file-ignores]
# 测试桩为保接口签名留未用参数 (ARG); assert / 魔数是测试惯用法
"tests/**" = ["S101", "PLR2004", "ARG"]
# typer 命令的每个 CLI 选项就是一个参数, 参数多是框架惯用法, 不是 PLR0913 真问题
"**/cli.py" = ["PLR0913"]

[tool.ruff.lint.flake8-bugbear]
# typer 的 x = typer.Option(...) 默认值是惯用法, 不是 B008 真问题
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.coverage.run]
source = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
